--- a/src/pages/orderdetail/orderdetail.scss
+++ b/src/pages/orderdetail/orderdetail.scss
@@ -15,6 +15,10 @@ page-orderdetail {
       overflow-x: auto;
       white-space: nowrap;
   }
+  .scroll-content{
+
+    height: 82% !important;
+  }
   .room-current
   {
     padding: 3%;
