--- a/src/pages/slidetest/slidetest.scss
+++ b/src/pages/slidetest/slidetest.scss
@@ -669,7 +669,21 @@ page-slidetest {
     ::-webkit-scrollbar {
       width: 6px;
       height: 18px;
-  }     
+  } 
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    a[disabled], button[disabled], [ion-button][disabled]{
+      opacity: 1 !important;
+      background-color: #b0b0b0 !important;
+      color:black !important;
+    }
+    button {
+      background-color: #fdd734 !important;
+      margin: 0 5px;
+    }
+  }    
   ::-webkit-scrollbar-track {
       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
   }     
@@ -805,7 +819,13 @@ page-slidetest {
           }
       }
 
-
+      ion-searchbar{        
+        .searchbar-input-container{            
+            .searchbar-input{
+                border-radius: 20px;
+            }
+        }
+     }
 
        /* Style the tab labels */
        .tab {
