--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,20 +3,20 @@
 $dynamic-colour: var(--dynamic-colour);
 body{
 
-    font-family: ggg !important;
+    font-family: notosan !important;
 }
 input{
     letter-spacing: 2px !important;
 }
 p{
     font-size:14px;
-    font-family: ggg !important;
+    font-family: notosan !important;
     letter-spacing: 2px;
     font-weight: 600;
 }
 span{
     font-size:14px;
-    font-family: ggg !important;
+    font-family: notosan !important;
     letter-spacing: 2px;
     font-weight: 600;
 
@@ -29,17 +29,17 @@ span{
 }
 div{
     font-size:14px;
-    font-family: ggg !important;
+    font-family: notosan !important;
     letter-spacing: 2px;
     font-weight: 600;
 
 }
 button{
-    font-family: ggg !important;
+    font-family: notosan !important;
     letter-spacing: 2px;
     font-weight: 600;
 }
 :root{
-    font-family: ggg !important;
+    font-family: notosan !important;
     --dynamic-colour: 90
  }
