TOP nav font-size 수정 출근부 - 내역 - 달력 font-size 수정

--- a/src/pages/slidetest/slidetest.scss
+++ b/src/pages/slidetest/slidetest.scss
@@ -6,7 +6,7 @@ page-slidetest {
         span{
             color:white;
             
-        font-size: 22px !important;
+        // font-size: 22px !important;
         }
     
         border: solid 1px;
@@ -80,6 +80,7 @@ page-slidetest {
           {
             height: 25px;
             width:50px;
+            font-size:12px;
           }
         }
       }
@@ -127,7 +128,7 @@ page-slidetest {
         color: black;
         background-color: white;
     span{
-        font-size: 22px !important;
+        // font-size: 22px !important;
         color:black;
     }
 
