--- a/src/pages/choicedetail/choicedetail.scss
+++ b/src/pages/choicedetail/choicedetail.scss
@@ -1,4 +1,8 @@
 page-choicedetail {
+  table{
+    margin: 0;
+    width: 100%;
+  }
   .messagediv{
     line-height: 25px;
     height: 30px;
@@ -463,7 +467,7 @@ page-choicedetail {
             display: block;
             margin: 5px;
             text-align: left;
-            font-size:12px;
+            font-size:14px !important;
         }
         br {
             display: block;
