진행중인방 나오도록 수정
진행중인방 나오도록 수정

--- a/src/pages/choicedetail/choicedetail.scss
+++ b/src/pages/choicedetail/choicedetail.scss
@@ -106,12 +106,13 @@ page-choicedetail {
 
     }
     .showmain{
-      height: 100%;
+      height: 70%;
       width: 100%;
       margin-top: 35px;
       background: pink;
+      
 
-    position: relative;
+    position: absolute;
     }
     .show{
 
